<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My ARVs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hospitalCare">Hospital Care</string>
    <string name="search">search</string>
    <string name="pills">Pills</string>
    <string name="nearestHospital">nearest Hospital</string>
    <string name="apoint">Appointment</string>
    <string name="appoint">Appointments</string>
    <string name="hospital">Hospital</string>
    <string name="alarm">alarm</string>
    <string name="profile">profile</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="days">Days remaining to collect Treatment</string>
    <string name="number">10</string>
    <string name="title_activity_log_in_screen">LogInScreen</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="logIn">Log in</string>
    <string name="Register">Register</string>
    <string name="forgot">Forgot password ?</string>
    <string name="title_activity_register">Register</string>
    <string name="Registration">Registration</string>
    <string name="firstname">firstname</string>
    <string name="surname">surname</string>
    <string name="VCT">VCT CLINIC</string>
    <string name="phone">phone number</string>
    <string name="town">Town</string>
    <string name="passwor">password</string>
    <string name="confirm">confirm password</string>
    <string name="submit">Submit</string>
    <string name="allMy">All my Appointents</string>
    <string name="hName">Hospital Name</string>
    <string name="daysLe">Days Left</string>
    <string name="title_activity_profile">Profile</string>
    <string name="pro">profile</string>
    <string name="pI">Personal Information</string>
    <string name="first">Firstname</string>
    <string name="last">Lastname</string>
    <string name="gender">Gender</string>
    <string name="Id">ID Number</string>
    <string name="Phone">Phone Number</string>
    <string name="mI">Medical Information</string>
    <string name="dia">Diagnosed  :</string>
    <string name="dd">Diagnosed</string>
    <string name="pillT">Pills Taken</string>
    <string name="PillsL">Pills Left</string>
    <string name="totalPills">"Total Pills "</string>
    <string name="local">Location</string>
    <string name="proF">Profile</string>
    <string name="title_activity_clinic">Clinic</string>
    <string name="vct">Nearest VCT Clinic</string>
    <string name="hiv">HIV360</string>
    <string name="lear">Learn about HIV and other STIs</string>
    <string name="oo">Pills</string>
    <string name="haveYou">Have you taken your medication ?</string>
    <string name="y">YES</string>
    <string name="n">NO</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="hr">Hr</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="set">Set Alarm</string>
    <string name="aboutAl">About this Alarm</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="allM">All my appointments</string>
    <string name="title_activity_about">About</string>
    <string name="learn">Learn About HIV</string>
    <string name="title_activity_wap_view">WapView</string>
    <string name="aboutappo">Ngwelezane</string>
    <string name="MC">Medical centre</string>
    <string name="nurse">Nurse</string>
    <string name="dT">Doctor</string>
    <string name="AT">Arrival Time</string>
    <string name="SR">Search Results</string>
    <string name="create">create new password</string>
    <string name="newP">New password</string>
    <string name="hint">Set up an alarm which will remind you to take your medication ,Please be adviced that this alarm will be repeated until you decide to stop it.</string>
    <string name="start">Start Alarm Service</string>
    <string name="stop">Stop</string>
    <string name="stopA">Stop Alarm</string>
    <string name="sto">Stop Alarm at required Time</string>
    <string name="setA">Set Alarm</string>
    <string name="title_activity_administrator">Administrator</string>
    <string name="admin">Administrator</string>
    <string name="message">message</string>
    <string name="set_App">Set appointment</string>
    <string name="collect">Collected Pills</string>
    <string name="delete">Delete patient</string>
    <string name="contact">Contact patient</string>
    <string name="details">Details</string>
    <string name="p_p">Patient Information</string>
    <string name="not">"Enter the patient's  Id Number or both their  Firstname and lastname "</string>
    <string name="p_i">Pills Information</string>
    <string name="t">total pills</string>
    <string name="p_c">pills Collected</string>
    <string name="jsakdhf">Patient Info</string>
    <string name="asd">Set An Alarm</string>
    <string name="hour">HOUR</string>
    <string name="nnn">Minute</string>
    <string name="ssss">Second</string>

</resources>