<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#931d4a" >

        <TextView
            android:id="@+id/wapsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/oo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold|normal" />

        <ImageView
            android:id="@+id/exit_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:contentDescription="@null"
            android:src="@drawable/exit" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@null"
            android:src="@drawable/back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/c_pills"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@null"
                android:src="@drawable/circle" />

            <TextView
                android:id="@+id/HIGH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/c_pills"
                android:layout_centerVertical="true"
                android:layout_marginRight="33dp"
                android:text="@string/number"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold|normal" />

            <TextView
                android:id="@+id/TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/HIGH"
                android:layout_centerHorizontal="true"
                android:text="@string/PillsL"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#006666"
                android:textStyle="bold|normal" />
        </RelativeLayout>

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/haveYou"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff0000" />

        <RadioGroup
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="120dp" >

            <RadioButton
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/y"
                android:textColor="#006666" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n"
                android:textColor="#006666" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>