<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#931d4a" >

        <TextView
            android:id="@+id/wapsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/asd"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold|normal" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@null"
            android:src="@drawable/back" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="#0ff00f" >

        <EditText
            android:id="@+id/minute"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignBaseline="@+id/hour"
            android:layout_alignBottom="@+id/hour"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@+id/hour"
            android:ems="10"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/second"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignBaseline="@+id/minute"
            android:layout_alignBottom="@+id/minute"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/minute"
            android:ems="10"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/hour"
            android:layout_alignRight="@+id/hour"
            android:layout_below="@+id/minute"
            android:text="@string/hour"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|normal" />

        <EditText
            android:id="@+id/hour"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="51dp"
            android:ems="10"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/minute"
            android:layout_below="@+id/minute"
            android:layout_toLeftOf="@+id/second"
            android:text="@string/nnn"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|normal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignLeft="@+id/second"
            android:layout_alignRight="@+id/second"
            android:text="@string/ssss"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|normal" />
    </RelativeLayout>

</LinearLayout>